src/test/ui/issues/issue-20714.rs
struct G;

fn main() {
    let g = G(); //~ ERROR: expected function, found `G`
}
